syntax="proto3";

package auth;

option go_package="/auth";

service AuthService {
  rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryResp) {}
  rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyResp) {}
  rpc CreateUserRole(CreateUserRoleReq) returns (CreateUserRoleResp) {}
}

message CreateUserRoleReq {
  int32 user_id = 1;
  string role = 2;
}

message CreateUserRoleResp {
  bool res = 1;
}

message DeliverTokenReq {
  int32  user_id= 1;
}

message VerifyTokenReq {
  string token = 1;
  string uri = 2;
  string method = 3;
}

message DeliveryResp {
  string token = 1;
}

message VerifyResp {
  int32 user_id = 1;
  bool res = 2;
}